--- a/app/src/main/res/layout/fragment_scan_history.xml
+++ b/app/src/main/res/layout/fragment_scan_history.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ScanFragment">
+    tools:context=".Fragments.ScanHistoryFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:layout_height="match_parent"
-        android:text="Google Maps Fragment" />
+        android:text="Scan History Fragment" />
 
-</RelativeLayout>
+</FrameLayout>
