--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <com.google.android.material.tabs.TabItem
-                    android:text="Google Books"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+<!--                <com.google.android.material.tabs.TabItem-->
+<!--                    android:text="Google Books"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content" />-->
 
             </com.google.android.material.tabs.TabLayout>
         </com.google.android.material.appbar.AppBarLayout>
