--- a/app/src/main/res/layout/fragment_pdf.xml
+++ b/app/src/main/res/layout/fragment_pdf.xml
@@ -35,6 +35,7 @@
                 <Button
                     android:id="@+id/ocrScanning_ID"
                     android:text="Scanning"
+                    android:enabled="false"
                     android:textColor="@android:color/white"
                     android:layout_weight="1"
                     android:background="@drawable/style_edittext_round_btn"
