--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
         ads:adSize="BANNER"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        ads:adUnitId="@string/banner_history">
+        ads:adUnitId="@string/banner_ID">
     </com.google.android.gms.ads.AdView>
 
 
@@ -31,16 +31,16 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/switch_4"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Enable Automatic Voice Record" />
+<!--    <androidx.appcompat.widget.SwitchCompat-->
+<!--        android:id="@+id/switch_4"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:text="Enable Automatic Voice Record" />-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:background="@android:color/darker_gray" />-->
 
 
 
