--- a/app/src/main/res/layout/recording_layout.xml
+++ b/app/src/main/res/layout/recording_layout.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/pauseBtn_ID"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:background="@drawable/pause_ic" />
+                android:background="@drawable/play_ic" />
 
             <Button
                 android:id="@+id/shareBtn_ID"
