--- a/app/src/main/res/layout/custom_dialog_recording_backward.xml
+++ b/app/src/main/res/layout/custom_dialog_recording_backward.xml
@@ -169,6 +169,7 @@
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:layout_height="wrap_content">
 
                     <Button
