--- a/app/src/main/res/layout/scanner_layout.xml
+++ b/app/src/main/res/layout/scanner_layout.xml
@@ -55,6 +55,7 @@
             <Button
                 android:id="@+id/pauseBtn_ID"
                 android:layout_width="35dp"
+                android:visibility="gone"
                 android:layout_height="35dp"
                 android:background="@drawable/play_ic" />
 
