--- a/app/src/main/res/layout/custom_dialog_forward_backward.xml
+++ b/app/src/main/res/layout/custom_dialog_forward_backward.xml
@@ -172,6 +172,15 @@
                     android:layout_height="wrap_content">
 
                     <Button
+                        android:id="@+id/saveNormalBtn_ID"
+                        android:text="Save"
+                        android:textAllCaps="false"
+                        android:background="@drawable/style_edittext_round_btn"
+                        android:layout_marginLeft="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <Button
                         android:id="@+id/saveRecordingBtn_ID"
                         android:text="Save Recording"
                         android:textAllCaps="false"
