--- a/app/src/main/res/layout/custom_dialog_forward_backward.xml
+++ b/app/src/main/res/layout/custom_dialog_forward_backward.xml
@@ -174,6 +174,7 @@
                     <Button
                         android:id="@+id/saveNormalBtn_ID"
                         android:text="Save"
+                        android:layout_weight="1"
                         android:textAllCaps="false"
                         android:background="@drawable/style_edittext_round_btn"
                         android:layout_marginLeft="6dp"
@@ -184,6 +185,7 @@
                         android:id="@+id/saveRecordingBtn_ID"
                         android:text="Save Recording"
                         android:textAllCaps="false"
+                        android:layout_weight="1"
                         android:background="@drawable/style_edittext_round_btn"
                         android:layout_marginLeft="6dp"
                         android:layout_width="wrap_content"
@@ -193,11 +195,21 @@
                         android:id="@+id/stopRecordingBtn_ID"
                         android:text="Stop Recording"
                         android:textAllCaps="false"
+                        android:layout_weight="1"
                         android:background="@drawable/style_edittext_round_btn"
                         android:layout_marginLeft="6dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
+                    <Button
+                        android:id="@+id/cancelBtn_ID"
+                        android:text="Cancel"
+                        android:layout_weight="1"
+                        android:textAllCaps="false"
+                        android:background="@drawable/style_edittext_round_btn"
+                        android:layout_marginLeft="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
